# yinmo-bot

./: Cargo.toml  README.md  agent.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/core/: daemon.rs  gateway.rs  mod.rs  scheduler.rs  task.rs
src/executor/: mod.rs  process.rs
